# helper_scripts

./: .gitignore  README.md  createvmclone.sh  hosts  rnd.sh
config_automation/: .gitignore  ansible.cfg  requirements.yml  setup_base.yml
other_automation/: LicenseSnapshot.pl  README.md  doit.sh  download_folder.py  pyproject.toml
uc_dot_com_migration/: .gitignore  README.md  Versionnumbers.md  dump_all_plugin_docs.py  dump_all_plugins.py  run_migration.sh  set_env.sh
uc_dot_com_migration/exports/: Build-all.json  Build-all_files.1.txt  Build-all_files.txt  Build-all_urls.csv  Build-allplugindocs.json  Build-allplugins.json  Deploy-all.json  Deploy-all_files.1.txt  Deploy-all_urls.csv  Deploy-allplugindocs.WRONG.json  Deploy-allplugindocs.json  Deploy-allplugins.0.json  Deploy-allplugins.1.json  MERGED-UNIQUE-CHECKED-all_urls.csv  MERGED-UNIQUE-all_urls.csv  MERGED-all_urls.csv  NEW_BLOGS-all_urls.csv  NEW_BLOGS_UNIQUE-all_urls.csv  RELEASE_NOTES-all_urls.csv  RELEASE_NOTES_UNIQUE-all_urls.csv  Release-all.0.json  Release-all_files.0.txt  Release-all_urls.csv  Release-allplugindocs.json  Release-allplugins.1.json  Velocity-all.json  Velocity-all_files.txt  Velocity-all_urls.csv  Velocity-allplugindocs.json  Velocity-allplugins.json
uc_dot_com_migration/src/: Deploy-allplugins.json  add_to_git_from_local_repo.py  check_all_urls.py  check_and_update_plugin_doc_links.py  check_urls.py  create_index_file.py  create_missing_blogs.py  create_plugin_docs.py  (+14 more)
upgrade_ucd/: upgrade_ucd_agents.py
vmware_automation/: addtoknownhosts.sh  createvmclone.sh  do-all-setup.sh
(+10 files in other folders)
